# hash-contracts

./: CMakeLists.txt  README.md  unittest.sh  upload.sh
contracts/: CMakeLists.txt
contracts/aiyunji.coin/: CMakeLists.txt
contracts/aiyunji.coin/include/aiyunji.coin/: aiyunji.coin.hpp
contracts/aiyunji.coin/ricardian/: aiyunji.coin.contracts.md.in
contracts/aiyunji.coin/src/: aiyunji.coin.cpp
contracts/aiyunji.love/: CMakeLists.txt
contracts/aiyunji.love/include/aiyunji.love/: entities.hpp  love.hpp
contracts/aiyunji.love/src/: love.cpp
contracts/aiyunji.mall/: CMakeLists.txt
contracts/aiyunji.mall.lite/: CMakeLists.txt
contracts/aiyunji.mall.lite/src/: mall.cpp
contracts/aiyunji.mall/src/: aiyunji.mall.cpp  delife.cpp  delife_mall.cpp  mall.cpp
contracts/aiyunji.swap/: CMakeLists.txt
contracts/aiyunji.swap/include/: math.hpp  string_utils.hpp  utils.hpp  wasm_db.hpp
contracts/aiyunji.swap/ricardian/: aiyunji.swap.clauses.md  aiyunji.swap.contracts.md.in
contracts/aiyunji.swap/src/: swap.cpp  swap_token.cpp
contracts/ehexburncoin/: CMakeLists.txt
contracts/ehexburncoin/ricardian/: ehexburncoin.clauses.md  ehexburncoin.contracts.md.in
contracts/ehexburncoin/src/: burncoin.cpp
contracts/hst.mall/: CMakeLists.txt
contracts/hst.mall/src/: mall.cpp
contracts/hst.token/: CMakeLists.txt
contracts/hst.token/src/: hst.token.cpp
contracts/mgp.bpvoting/: CMakeLists.txt
contracts/mgp.bpvoting/ricardian/: mgp.bpvoting.clauses.md  mgp.bpvoting.contracts.md.in
contracts/mgp.bpvoting/src/: bpvoting.cpp
(+26 files in other folders)
